samples/_failures_safe/1761076260_a78427_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be75f441.c: In function ‘tokenize’:
./samples/SAFE/__tmp_be75f441.c:160:9: error: expected declaration or statement at end of input
  160 |         tokens[token_count].line = line;
      |         ^~~~~~
./samples/SAFE/__tmp_be75f441.c:160:9: error: expected declaration or statement at end of input
